a messy push, just to allow me to post a problem to stackoverflow...Here I have a buggy but working script for keeping my ministory1 un scrollable until i want it, and then having overflow:auto applied to it. I also have some really messy attempts at getting an element to fade when its scroll position relative to the window is defined

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@
 #intro1inner {
     height: 750px;
     width: 100%;
-    overflow: auto;
 }
 
 #intro1a {
